Update compaction config